# furniture_shop

./: README.md
django-furniture_factory/: MANIFEST.in  README.rst  setup.cfg
django-furniture_factory/django_furniture_factory.egg-info/: PKG-INFO  SOURCES.txt
django-furniture_factory/furniture_factory/: custom_permissions.py  db.sqlite3  furniture_factory_api_details.postman_collection.json  manage.py  requirements.txt
django-furniture_factory/furniture_factory/furniture_factory/: settings.py  urls.py  wsgi.py
django-furniture_factory/furniture_factory/table/: admin.py  models.py  urls.py
django-furniture_factory/furniture_factory/table/migrations/: 0001_initial.py  0002_auto_20210313_2305.py  0003_auto_20210313_2323.py  0004_table_created_by.py
django-furniture_factory/furniture_factory/table/serializers_table/: serializers.py
django-furniture_factory/furniture_factory/table/table_api/: api.py
django-furniture_factory/furniture_factory/table/tests/: test_table_api.py
