[metadata]
name = django-furniture_factory
version = 0.1
description = A Django Rest App to Create, List, Retrieve, Update, Partial Update, Delete.
long_description = file: README.rst
url = https://github.com/Milanmangar/global_logic_furniture_company.git
author = Milan Thapa
author_email = milanthapa898@gmail.com
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find: